fixed recording and button layout issues

--- a/app/style/components/questions.scss
+++ b/app/style/components/questions.scss
@@ -13,7 +13,7 @@
 .questions {
   align-items: center;
   display: flex;
-  height: 70%;
+  height: 60%;
   margin-top: -130px;
   position: relative;
   text-align: center;
